# Pas-cman

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Doxyfile  Makefile  README.md  cmake_install.cmake  pacman.cpp
docs/html/: AnimationComponent_8h.html  AnimationComponent_8h__dep__incl.dot  AnimationComponent_8h__incl.dot  AnimationComponent_8h_source.html  AnimationController_8h.html  AnimationController_8h__dep__incl.dot  AnimationController_8h__incl.dot  AnimationController_8h_source.html  AnimationModel_8h.html  AnimationModel_8h__dep__incl.dot  AnimationModel_8h__incl.dot  AnimationModel_8h_source.html  Collider_8h.html  Collider_8h__dep__incl.dot  Collider_8h__incl.dot  Collider_8h_source.html  CollisionController_8h.html  CollisionController_8h__dep__incl.dot  CollisionController_8h__incl.dot  CollisionController_8h_source.html  DataController_8h.html  DataController_8h__dep__incl.dot  DataController_8h__incl.dot  DataController_8h_source.html  DotBig_8h.html  DotBig_8h__dep__incl.dot  DotBig_8h__incl.dot  DotBig_8h_source.html  DotController_8h.html  (+282 more)
include/: Animation.h  Collider.h  CollisionManager.h  Dot.h  DotBig.h  DotSmall.h  Eatable.h  FontController.h  Fruit.h  GameController.h  GameObject.h  GameVars.h  Ghost.h  Map.h  MovableGameObject.h  Player.h  StaticGameObject.h  UIController.h
includes/: Dot.h  Ghost.h  Player.h
src/: Animation.cpp  Collider.cpp  CollisionManager.cpp  Dot.cpp  DotBig.cpp  DotSmall.cpp  Eatable.cpp  FontController.cpp  Fruit.cpp  GameController.cpp  GameObject.cpp  Ghost.cpp  Map.cpp  MovableGameObject.cpp  Player.cpp  StaticGameObject.cpp  UIController.cpp
(+458 files in other folders)
